--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Stock of food</title>
     <link rel="stylesheet" href="destyle.css">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="stockofood.css">
   </head>
   <body>
     <h1>Stock of food</h1>
@@ -17,11 +17,15 @@
         <li>  ・カレー</li>
         <li>  ・牛丼2</li>
         <li>  ・親子丼</li>
-        <li>  ・サバ缶（味噌／カレー）</li>
+        <li>  ・サバ缶　味噌</li>
+        <li>  ・サバ缶　カレー</li
         <li>おにぎり</li>
         <li>そうめん（温／冷）</li>
         <li>そば（温／冷／カレー）</li>
-        <li>パスタ（ミートソース／カルボナーラ／ボロネーゼ2）</li>
+        <li>パスタ</li>
+        <li>  ・ミートソース</li>
+        <li>　・カルボナーラ</li>
+        <li>　・ボロネーゼ2</li>
         <li>やきそば</li>
         <li>カップ麵</li>
         <li>  ・緑のたぬき</li>
@@ -41,7 +45,13 @@
       <h2>side</h2>
       <br>
       <ul>
-        <li>味噌汁（とうふ／長ネギ／わかめ／油揚げ／ほうれん草／あおさ）</li>
+        <li>味噌汁</li>
+        <li>　・とうふ</li>
+        <li>　・長ネギ</li>
+        <li>　・わかめ</li>
+        <li>　・油揚げ</li>
+        <li>　・ほうれん草</li>
+        <li>　・あおさ</li>
         <li>たまごスープ</li>
         <li>コーンスープ</li>
         <li>アスパラスープ</li>
