--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Stock of food</title>
     <link rel="stylesheet" href="destyle.css">
-    <link rel="stylesheet" href="stockofood.css">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
       <h2>main</h2>
